k8s/platform/argocd/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingressroute
  namespace: argocd
  labels:
    app: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.dev.viscord.app`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: redirect-https
          namespace: default
  tls:
    certResolver: letsencrypt
